--- a/config.json.sample
+++ b/config.json.sample
@@ -1,5 +1,6 @@
 {
     "auth_url": "https://__HOST__/v2.0",
+    "auth_version" : "v2",
     "gohan": {
         "schema": "/gohan/v0.1/schemas",
         "url": "https://__HOST__"
